--- a/server/.env
+++ b/server/.env
@@ -1,7 +1,7 @@
 # 
 NODE_ENV=development
 NODE_PORT=5000
-ADMINEMAIL=dep45.dep@gmail.com
-ADMINPASSWORD=yuudrrwlbsufyqwv
+ADMINEMAIL=
+ADMINPASSWORD=
 DB_URI=mongodb+srv://dbUser:HnmIp4VuOHExde12@cluster0.yneow2u.mongodb.net/?retryWrites=true&w=majority
 DB_NAME="codingSite"
