--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --reporter mochawesome --reporter-options reportFilename=custom-report,reportDir=reports",
+    "coverage": "c8 --reporter=lcov --reporter=text-summary npm test"
   },
   "type": "module",
   "keywords": [],
@@ -19,6 +20,13 @@
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.2.0",
     "mongoose": "^7.0.3",
-    "nodemailer": "^6.9.1"
+    "nodemailer": "^6.9.1",
+    "sinon": "^15.0.4"
+  },
+  "devDependencies": {
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "mochawesome": "^7.1.3",
+    "nodemailer-mock-transport": "^1.1.0"
   }
 }
