--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "mongodb-memory-server": "^8.12.2",
     "mongoose": "^7.0.3",
     "nodemailer": "^6.9.1",
-    "sinon": "^15.0.4"
+    "sinon": "^15.0.4",
+    "validator": "^13.9.0"
   },
   "devDependencies": {
     "chai": "^4.3.7",
