--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "test": "mocha --reporter mochawesome --reporter-options reportFilename=custom-report,reportDir=reports",
-    "coverage": "c8 --reporter=lcov --reporter=text-summary npm test"
+    "coverage": "c8 --check-coverage true --reporter=lcov --reporter=text-summary --all --src=src npm test"
   },
   "type": "module",
   "keywords": [],
