--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "dayjs": "^1.11.7",
     "flowbite": "^1.6.4",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-datepicker": "^4.11.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
